# zero-day-chat

./: .gitignore  errors.txt  index.html  package-lock.json  package.json  zero-day-chat
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/logos/.github/workflows/: release.yml
src-tauri/src/: identity.rs  lib.rs  main.rs  network.rs  storage.rs
