[package]
name = "zero_day_chat"
version = "1.0.0"
description = "A decentralized, P2P communication client"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "zero_day_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.11", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bip39 = "2.0"
hex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
