[package]
name = "zero-day-chat"
version = "1.0.0"
description = "Decentralized P2P Secure Chat"
authors = ["nottraceable"]
edition = "2021"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bip39 = { version = "2.2", features = ["rand"] }
rand = "0.8"
ed25519-dalek = "2.1"
libp2p = { version = "0.53", features = ["full", "tokio", "dns", "tcp", "websocket", "noise", "yamux", "gossipsub", "kad", "identify"] }
futures = "0.3"
async-trait = "0.1"
dirs = "5.0"
hex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
